--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "calc",
+  "name": "mapfinder",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-autocomplete": "^1.1.0",
+    "react-google-places-autocomplete": "^1.5.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
@@ -27,5 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0"
   }
 }
