--- a/package.json
+++ b/package.json
@@ -7,15 +7,14 @@
     "google-maps-react": "^2.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-google-autocomplete": "^1.1.0",
-    "react-google-places-autocomplete": "^1.5.0",
     "react-scripts": "3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "precommit": "pretty-quick --staged"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +33,10 @@
   },
   "devDependencies": {
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0"
+    "enzyme-adapter-react-16": "^1.14.0",
+    "eslint-plugin-es-beautifier": "^1.0.1",
+    "husky": "^3.0.2",
+    "lint-staged": "^9.2.1",
+    "pretty-quick": "^1.11.1"
   }
 }
